SunSkycodepkg/objects/SunSky_RIOM__c.object
<CustomObject>
    <description>RIOM tracks risks, issues, opportunities</description>
    <fields>
        <fullName>Cause__c</fullName>
        <description>Describe the cause of the risk, issue, or opportunity has on the project.</description>
        <label>Cause</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Impact_Area__c</fullName>
        <description>The impact the risk, issue, or opportunity can have on the project if not reviewed and resolved.</description>
        <label>Impact Area</label>
        <picklist>
            <picklistValues>
                <fullName>Security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delivery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Continuity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contractual Compliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Schedule</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Relationship -Current Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Relationship -Future Business</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Impact_Factor__c</fullName>
        <description>The level of the impact of the risk, issue, or opportunity to the project.</description>
        <label>Impact Factor</label>
        <picklist>
            <controllingField>Impact_Area__c</controllingField>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Impact__c</fullName>
        <description>Describe the impact the risk, issue, or opportunity has on the project.</description>
        <label>Impact</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Issue_Detail__c</fullName>
        <description>A description of the issue raised related to a project.</description>
        <label>Issue Detail</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Issue_Status__c</fullName>
        <description>Track the status of the issue related to the project.  Some issues may first be identified as a risk, and if not managed can become an issue.</description>
        <label>Issue Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Converted from risk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed as rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed as withdrawn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Occurred</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed as avoided</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed as resolved</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Issue__c</fullName>
        <description>An overview of the issue raised related to a project.</description>
        <label>Issue</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity_Area__c</fullName>
        <description>The impact the opportunity can have on the project or business.</description>
        <label>Opportunity Area</label>
        <picklist>
            <picklistValues>
                <fullName>Improve Business-Revenue Expansion/Preservation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Improve Business-Innovation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Improve Business-Delighting the Client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Improve Business-Efficiency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employee Empowerment-Engaged Employees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketplace- Public Perception/Brand Recognition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketplace- Business Partnership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketplace-Business Position</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketplace-Industry Position</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Opportunity_Factor__c</fullName>
        <description>The level of impact the opportunity has to the project.</description>
        <label>Opportunity Factor</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <description>An overview of the opportunity raised related to a project.</description>
        <label>Opportunity</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Project_Reference__c</fullName>
        <description>The project related to the risk, issue, or opportunity.</description>
        <label>Project Reference</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RIOM_Type__c</fullName>
        <description>Identify the RIOM type: Risk, Issue, or Opportunity.  Specific details will be captured for each type.</description>
        <label>RIOM Type</label>
        <picklist>
            <picklistValues>
                <fullName>Risk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opportunity</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RIO_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Contact to respond to questions about the risk, issue, or opportunity.</description>
        <label>RIO Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>SunSky_RIOM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reported_Date__c</fullName>
        <description>The date the risk, issue, or opportunity was reported.</description>
        <label>Reported Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Risk_Likelihood__c</fullName>
        <description>The likelihood of the risk related to the project occurring.</description>
        <label>Risk Likelihood</label>
        <picklist>
            <picklistValues>
                <fullName>Possible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Probable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Imminent</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Risk_Status__c</fullName>
        <description>Track the status of the risk related to the project. Some items may first be identified as a risk, and if not managed can become an issue.</description>
        <label>Risk Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed as rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closes as withdrawn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed as realized- no further action</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed- converted to issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed as avoided</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed as mitigated</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Risk__c</fullName>
        <description>An overview of the risk raised related to the project.</description>
        <label>Risk</label>
        <type>TextArea</type>
    </fields>
    <label>Tool RIOM</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Project_Reference__c</columns>
        <columns>RIOM_Type__c</columns>
        <columns>Cause__c</columns>
        <columns>Impact__c</columns>
        <columns>Issue__c</columns>
        <columns>Risk__c</columns>
        <columns>Risk_Likelihood__c</columns>
        <columns>Impact_Area__c</columns>
        <columns>Impact_Factor__c</columns>
        <columns>Issue_Status__c</columns>
        <columns>Risk_Status__c</columns>
        <columns>RIO_Contact__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <columns>NAME</columns>
        <columns>Project_Reference__c</columns>
        <columns>RIOM_Type__c</columns>
        <columns>Cause__c</columns>
        <columns>Impact__c</columns>
        <columns>Impact_Area__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Opportunity_Area__c</columns>
        <columns>Opportunity_Factor__c</columns>
        <columns>Impact_Factor__c</columns>
        <columns>RIO_Contact__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RIOM_Type__c</field>
            <operation>equals</operation>
            <value>Opportunity</value>
        </filters>
        <label>All Opportunities</label>
    </listViews>
    <listViews>
        <fullName>All_Issues</fullName>
        <columns>NAME</columns>
        <columns>Project_Reference__c</columns>
        <columns>RIOM_Type__c</columns>
        <columns>Cause__c</columns>
        <columns>Impact__c</columns>
        <columns>Issue__c</columns>
        <columns>Impact_Area__c</columns>
        <columns>Impact_Factor__c</columns>
        <columns>Issue_Status__c</columns>
        <columns>RIO_Contact__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RIOM_Type__c</field>
            <operation>equals</operation>
            <value>Issue</value>
        </filters>
        <label>All Issues</label>
    </listViews>
    <listViews>
        <fullName>All_Risks</fullName>
        <columns>NAME</columns>
        <columns>Project_Reference__c</columns>
        <columns>RIOM_Type__c</columns>
        <columns>Cause__c</columns>
        <columns>Impact__c</columns>
        <columns>Risk__c</columns>
        <columns>Risk_Likelihood__c</columns>
        <columns>Impact_Area__c</columns>
        <columns>Impact_Factor__c</columns>
        <columns>Risk_Status__c</columns>
        <columns>RIO_Contact__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RIOM_Type__c</field>
            <operation>equals</operation>
            <value>Risk</value>
        </filters>
        <label>All Risks</label>
    </listViews>
    <nameField>
        <displayFormat>RIOM-{000000}</displayFormat>
        <label>SunSky RIOM Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tool RIOM</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>ReqRIOMFields</fullName>
        <active>true</active>
        <description>Enforces completion of related fields based on RIOM type.</description>
        <errorConditionFormula>OR(
AND
(ISPICKVAL(RIOM_Type__c,&quot;Risk&quot;),
OR(ISBLANK (TEXT (Risk_Likelihood__c)), 
ISBLANK (TEXT (Risk_Status__c)))),
AND (
ISPICKVAL (RIOM_Type__c, &quot;Issue&quot;), 
OR(ISBLANK (Issue_Detail__c), 
ISBLANK (TEXT (Issue_Status__c)))),
AND (
ISPICKVAL (RIOM_Type__c, &quot;Opportunity&quot;), 
OR(ISBLANK (TEXT (Opportunity_Area__c)), 
ISBLANK (TEXT (Opportunity_Factor__c)))),
AND (
ISPICKVAL(RIOM_Type__c,&quot;Risk&quot;),
OR(NOT (ISBLANK (Issue_Detail__c)), 
NOT (ISBLANK (TEXT (Issue_Status__c))),
NOT(ISBLANK (TEXT (Opportunity_Area__c))), 
NOT(ISBLANK (TEXT (Opportunity_Factor__c))))),
AND (
ISPICKVAL(RIOM_Type__c,&quot;Issue&quot;),
OR(NOT (ISBLANK (TEXT(Risk_Likelihood__c))), 
NOT (ISBLANK (TEXT (Risk_Status__c))),
NOT(ISBLANK (TEXT (Opportunity_Area__c))), 
NOT(ISBLANK (TEXT (Opportunity_Factor__c))))),
AND (
ISPICKVAL(RIOM_Type__c,&quot;Opportunity&quot;),
OR(NOT (ISBLANK (TEXT(Risk_Likelihood__c))), 
NOT (ISBLANK (TEXT (Risk_Status__c))),
NOT(ISBLANK (Issue_Detail__c)), 
NOT(ISBLANK (TEXT (Issue_Status__c))))))</errorConditionFormula>
        <errorMessage>*Complete the related RIOM fields for the RIOM Type selected*
  RISK requires Risk Likelihood and Risk Status
   ISSUE requires Issue Detail and Issue Status
   OPPORTUNITY requires Opportunity Area and Opportunity Factor</errorMessage>
    </validationRules>
</CustomObject>